WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
269728
new exception handler adoption
https://bugs.webkit.org/show_bug.cgi?id=269728
Summary
new exception handler adoption
bkayes
Reported
2024-02-19 10:02:29 PST
This adopts a new mach exception handler for webkit on darwin in accordance with
rdar://119256062
(webkit adoption of new hardened mach exception APIs)
Attachments
Add attachment
proposed patch, testcase, etc.
bkayes
Comment 1
2024-02-19 11:56:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24761
Mark Lam
Comment 2
2024-03-06 14:17:35 PST
rdar://119256062
EWS
Comment 3
2024-03-14 06:40:51 PDT
Committed
276090@main
(079bd31e3781): <
https://commits.webkit.org/276090@main
> Reviewed commits have been landed. Closing PR #24761 and removing active labels.
WebKit Commit Bot
Comment 4
2024-03-14 10:19:29 PDT
Re-opened since this is blocked by
bug 270983
EWS
Comment 5
2024-03-15 14:09:12 PDT
Committed
276198@main
(9bdabedf3aab): <
https://commits.webkit.org/276198@main
> Reviewed commits have been landed. Closing PR #25907 and removing active labels.
WebKit Commit Bot
Comment 6
2024-03-18 14:50:57 PDT
Re-opened since this is blocked by
bug 271182
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug