Source/WTF/wtf/win/SignalsWin.cpp
@@ -149,6 +149,11 @@ void SignalHandlers::initialize()
     // noop
 }
 
+void finalizeSignalHandlers()
+{
+    // noop
+}
+
 } // namespace WTF
 
 #endif // OS(WINDOWS)
